--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/p6"]
 	path = lib/p6
 	url = https://github.com/JulesFouchy/p6
+[submodule "lib/SimplexNoise"]
+	path = lib/SimplexNoise
+	url = https://github.com/SRombauts/SimplexNoise.git
