no more inline fct, added static handleBehaviors function

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][BOID variables]
-Pos=60,60
+ViewportPos=26,600
+ViewportId=0x01558366
 Size=625,423
 Collapsed=0
 
