--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,9 +44,12 @@ target_link_libraries(${PROJECT_NAME} PRIVATE doctest::doctest)
 add_subdirectory(lib/p6)
 target_link_libraries(${PROJECT_NAME} PRIVATE p6::p6)
 
-# ---Add p6 library---
-add_subdirectory(lib/assimp)
-target_link_libraries(${PROJECT_NAME} PRIVATE assimp::assimp)
+# ---Add tinyobj library---
+add_subdirectory(lib/tinyobjloader)
+target_link_libraries(${PROJECT_NAME} PRIVATE tinyobjloader)
 
 # Shaders
 p6_copy_folder(${PROJECT_NAME} shaders)
+
+# Models
+p6_copy_folder(${PROJECT_NAME} models)
